# WP2-PROJECT_old

./: CMakeLists.txt  CMakeLists.txt~  cluster_extraction.cpp  cluster_extraction.cpp~  correspondence_grouping_FPFH.cpp~  correspondence_grouping_SHOT_Iterative.cpp  correspondence_grouping_SHOT_multiple (copy).cpp  directoryScan.cpp  directoryScanv2.cpp  pcd_size.cpp  pcd_size.cpp~  region_growing_rgb_segmentation.cpp  region_growing_segmentation.cpp  region_growing_segmentation.cpp~
src/: 3DSIFT_Keypoints.cpp  cluster_extraction.cpp  cluster_extraction_v2.cpp  conditional_euclidean_clustering.cpp  correspondence_grouping_CSHOT.cpp  correspondence_grouping_FPFH.cpp  correspondence_grouping_SHOT.cpp  correspondence_grouping_SHOT_Iterative.cpp  correspondence_grouping_SHOT_Iterative_Obj-Obj.cpp  correspondence_grouping_SHOT_Iterative_v2.cpp  correspondence_grouping_SHOT_Iterative_v3.cpp  correspondence_grouping_SHOT_Obj-Obj.cpp  objectExtractor.cpp  objectExtractorIterative.cpp  parseXML.cpp  pcd_size.cpp  transform_demo.cpp
